@@ -175,7 +175,7 @@ sub htmlize ($$$) { #{{{
 	my $page = shift;
 	my $destpage = shift;
 
-	return IkiWiki::htmlize($page, pagetype($pagesources{$page}),
+	return IkiWiki::htmlize($page, $destpage, pagetype($pagesources{$page}),
 		IkiWiki::preprocess($page, $destpage, shift));
 }
 
