@@ -7,11 +7,9 @@ This plugin adds full text search to ikiwiki, using the
 and the [[cpan Search::Xapian]] perl module. (The [[cpan HTML::Scrubber]]
 perl module will also be used, if available.)
 
-Ikiwiki will handle indexing new and changed page contents. Note that it
-indexes page contents before they are preprocessed and converted to html,
-as this tends to produce less noisy search results. Also, since it only
-indexes page contents, files copied by the [[rawhtml]] plugin will not be
-indexed, nor will other types of data files.
+Ikiwiki will handle indexing new and changed page contents. Note that since
+it only indexes page contents, files copied by the [[rawhtml]] plugin will
+not be indexed, nor will other types of data files.
 
 There is one setting you may need to use in the config file. `omega_cgi` 
 should point to the location of the omega cgi program. The default location
