@@ -8,6 +8,7 @@ ikiwiki (2.49) UNRELEASED; urgency=low
   * Filter hooks are no longer called during the scan phase. This will
     prevent wikilinks added by filters from being scanned properly. But
     no known filter hook does that, so let's not waste time on it.
+  * Pass a destpage parameter to the sanitize hook.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 30 May 2008 19:08:54 -0400
 
